# microservices-deployment-pipeline

./: .checkov.yml  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  GITHUB_ACTIONS_FIXES.md  LICENSE  Makefile  PHASE1_COMPLETE.md  PHASE2_SECURITY_COMPLETE.md  PHASE2_SECURITY_PLAN.md  PHASE3_KUBERNETES_COMPLETE.md  PHASE3_KUBERNETES_PLAN.md  PHASE4_ADVANCED_DEPLOYMENT_PLAN.md  PHASE5_OBSERVABILITY_PLAN.md  PHASE6_MULTICLOUD_COMPLETE.md  PHASE6_MULTICLOUD_PLAN.md  PHASE7_PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE8_CHAOS_ENGINEERING_COMPLETE.md  PHASE8_CHAOS_ENGINEERING_PLAN.md  README.md  debug-network.sh  docker-compose.dev.yml  docker-compose.secure.yml  docker-compose.yml  test-proxy.js
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
docs/: 00-PROJECT-OVERVIEW.md  01-PHASE1-FOUNDATION.md  02-PHASE2-SECURITY.md  03-PHASE3-KUBERNETES.md  04-PHASE4-DEPLOYMENT.md  DEMO-GUIDE.md  MAKEFILE-USAGE-GUIDE.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PROJECT-COMPLETION-CHECKLIST.md  PROJECT.md
optimization/: README-PHASE7.md
scripts/: blue-green-deploy.sh  canary-deploy.sh  deploy-monitoring.sh  deploy-multicloud.sh  health-check.sh  run-local.sh  start-services.sh  test-api.sh  test-phase7-components.sh  validate-phase7-offline.sh
security/: .semgrep.yml  trivy.yaml
services/user-service/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml  requirements-prod.txt  requirements.txt  setup.sh
services/user-service/tests/: test_user_service.py
(+169 files in other folders)
